[package]
name = "memgram"
version = "0.1.0"
authors = ["kurome"]
edition = "2018"

[dependencies]
hexplay = "0.2.1"
toml = "0.5.5"
serde = { version = "1.0.104", features = ["derive"] }
colored = "1.9.2"
prettytable-rs = "0.8.0"
hex = "0.4.0"
widestring = "0.4.0"
iced-x86 = "1.0.0"
regex = "1.3.4"
